modified code to run in java 17